syntax = "proto3";

import "google/api/client.proto";
import "google/longrunning/operations.proto";

package testing.basiclro;

option csharp_namespace = "Testing.BasicLro";

// Test service
service BasicLro {
  option (google.api.default_host) = "lro.example.com";
  option (google.api.oauth_scopes) = "scope1,scope2";

  // Test method
  rpc Method1(Request) returns(google.longrunning.Operation) {
    option (google.longrunning.operation_info) = {
      response_type: "LroResponse"
      metadata_type: "LroMetadata"
    };
  }
}

message Request {
}

message LroResponse {
}

message LroMetadata {
}
